public class ExitRequest extends AbstractMessage{
}
